password mismatch in sign up fix

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -179,11 +179,11 @@
             const toggleButton = passwordField.nextElementSibling;
 
             if (passwordField.type === 'password') {
-                passwordField.type = 'text'; // Show password
-                toggleButton.textContent = "Hide"; // Change button text
+                passwordField.type = 'text'; 
+                toggleButton.textContent = "Hide"; 
             } else {
-                passwordField.type = 'password'; // Hide password
-                toggleButton.textContent = "Show"; // Change button text
+                passwordField.type = 'password'; 
+                toggleButton.textContent = "Show"; 
             }
         }
 
